--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: black;
+        background-color: #555;
     }
     .ol-popup {
         position: relative;
